@@ -8,6 +8,7 @@ Added: IAnnotationTransformer2
 Added: @Test(invocationTimeOut), which lets you set a time out for the total time taken by invocationCount
 Added: IInvokedMethodListener
 Added: -testjar supports jar file with no testng.xml file
+Fixed: testng-failed.xml was sometimes incorrectly generated (Borojevic)
 Fixed: TestNG-228: Assert.assertEqualsNoOrder
 Fixed: TestNG-229: Assert.assertEquals does not behave properly when arguments are sets
 Fixed: TESTNG-36: assertEquals(Collection actual, Collection expected, String message) may have bug
